--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: ComicMono;
+    src: url(./ComicMono.ttf);
+}
+
 body{
-    font-family: cursive ;
+    font-family: ComicMono, Arial, sans-serif;
     background-color: #212121;
     padding: 100px;
     padding-top: 0px;
